[package]
name = "trusted-server-fastly"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.5"
fastly = "0.11.5"
futures = "0.3"
log = "0.4.20"
log-fastly = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"   
trusted-server-common = { path = "../common" }
